--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">AQSHAL ZAKKI | WEB PROGRAMMER</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/me-edit-square2.jpeg" alt="" /></span></a
+                ><span class="d-block d-lg-none">MY RESUME</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/me-edit-square2.jpeg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -240,7 +240,7 @@
                 </div>
             </section>
 
-            <footer class="text-center py-3 bg-primary text-dark">
+            <footer class="text-center py-3 bg-primary text-light">
                 <b>&#169;2020 Aqshal Zakki | All Right Reserved</b>
             </footer>
         </div>
