change font size and adding fullname

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">Aqshal <span class="text-primary">Zakki</span></h1>
+                    <h2 class="mb-0">
+                        Muhammad
+                        <span class="text-primary">Aqshal</span>
+                        Zakki
+                    </h2>
                     <div class="subheading mb-5">Bandung · Jalan Sukagalih, Indonesia · (+62) 8822-9373-493 · 
                         <a target="_blank" href="mailto:devsomething3@gmail.com">devsomething3@gmail.com</a>
                     </div>
