--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -208,15 +208,28 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <!-- <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section> -->
             <hr class="m-0" />
+            
+            <section class="resume-section" id="portfolios">
+                <div class="resume-section-content">
+                    <h2>Portfolios</h2>
+                    <ul class="fa-ul mb-0 list-inline mt-5">
+                        <li class="list-inline-item mb-5">
+                            <h4>
+                                <a href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
+                            </h4>
+                            <img class="portfolio-images" src="./assets/img/portfolios/color-flipper.png">
+                        </li>
+                        <li class="list-inline-item mb-5">
+                            <h4>
+                                <a href="https://aqshalzakki.github.io/counter-app/">Counter App</a>
+                            </h4>
+                            <img class="portfolio-images" src="./assets/img/portfolios/counter-app.png">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
