changes format portfolios images from png to PNG

--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
                             <h4>
                                 <a href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
                             </h4>
-                            <img class="portfolio-images" src="./assets/img/portfolios/color-flipper.png">
+                            <img class="portfolio-images" src="./assets/img/portfolios/color-flipper.PNG">
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
                                 <a href="https://aqshalzakki.github.io/counter-app/">Counter App</a>
                             </h4>
-                            <img class="portfolio-images" src="./assets/img/portfolios/counter-app.png">
+                            <img class="portfolio-images" src="./assets/img/portfolios/counter-app.PNG">
                         </li>
                     </ul>
                 </div>
