making portfolio images clickable

--- a/index.html
+++ b/index.html
@@ -218,13 +218,17 @@
                             <h4>
                                 <a href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
                             </h4>
-                            <img class="portfolio-images" src="./assets/img/portfolios/color-flipper.PNG">
+                            <a href="https://aqshalzakki.github.io/color-flipper">
+                                <img class="portfolio-images" src="./assets/img/portfolios/color-flipper.PNG">
+                            </a>
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
                                 <a href="https://aqshalzakki.github.io/counter-app/">Counter App</a>
                             </h4>
-                            <img class="portfolio-images" src="./assets/img/portfolios/counter-app.PNG">
+                            <a href="https://aqshalzakki.github.io/counter-app/">
+                                <img class="portfolio-images" src="./assets/img/portfolios/counter-app.PNG">
+                            </a>
                         </li>
                     </ul>
                 </div>
