change portfolio section to fun projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#funProject">Fun Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -210,10 +210,18 @@
             <hr class="m-0" />
             <hr class="m-0" />
             
-            <section class="resume-section" id="portfolios">
+            <section class="resume-section" id="funProject">
                 <div class="resume-section-content">
-                    <h2>Portfolios</h2>
+                    <h2>Fun Projects</h2>
                     <ul class="fa-ul mb-0 list-inline mt-5">
+                        <li class="list-inline-item mb-5">
+                            <h4>
+                                <a href="./assets/img/portfolios/nomads-travel.PNG">Web Travel Agency</a>
+                            </h4>
+                            <a href="./assets/img/portfolios/nomads-travel.PNG">
+                                <img class="portfolio-images" src="./assets/img/portfolios/nomads-travel.PNG">
+                            </a>
+                        </li>
                         <li class="list-inline-item mb-5">
                             <h4>
                                 <a href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
