--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#funProject">Fun Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -210,9 +210,8 @@
             <hr class="m-0" />
             <hr class="m-0" />
             
-            <section class="resume-section" id="funProject">
-                <div class="resume-section-content">
-                    <h2>Fun Projects</h2>
+            <section class="resume-section" id="projects">               <div class="resume-section-content">
+                    <h2>Projects</h2>
                     <ul class="fa-ul mb-0 list-inline mt-5">
                         <li class="list-inline-item mb-5">
                             <h4>
