adding web inventaris on project section

--- a/index.html
+++ b/index.html
@@ -212,28 +212,36 @@
             
             <section class="resume-section" id="projects">               <div class="resume-section-content">
                     <h2>Projects</h2>
-                    <ul class="fa-ul mb-0 list-inline mt-5">
+                    <ul class="fa-ul mb-0 list-inline mt-5 project-list">
                         <li class="list-inline-item mb-5">
                             <h4>
-                                <a href="./assets/img/portfolios/nomads-travel.PNG">Web Travel Agency</a>
+                                <a target="_blank" href="./assets/img/portfolios/nomads-travel.PNG">Web Travel Agency</a>
                             </h4>
-                            <a href="./assets/img/portfolios/nomads-travel.PNG">
+                            <a target="_blank" href="./assets/img/portfolios/nomads-travel.PNG">
                                 <img class="portfolio-images" src="./assets/img/portfolios/nomads-travel.PNG">
                             </a>
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
-                                <a href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
+                                <a target="_blank" href="https://inventaris-smkn2.000webhostapp.com/">Web Inventaris SMKN 2 Bandung</a>
                             </h4>
-                            <a href="https://aqshalzakki.github.io/color-flipper">
+                            <a target="_blank" href="./assets/img/portfolios/inventaris-smkn2.PNG">
+                                <img class="portfolio-images" src="./assets/img/portfolios/inventaris-smkn2.PNG">
+                            </a>
+                        </li>
+                        <li class="list-inline-item mb-5">
+                            <h4>
+                                <a target="_blank" href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
+                            </h4>
+                            <a target="_blank" href="https://aqshalzakki.github.io/color-flipper">
                                 <img class="portfolio-images" src="./assets/img/portfolios/color-flipper.PNG">
                             </a>
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
-                                <a href="https://aqshalzakki.github.io/counter-app/">Counter App</a>
+                                <a target="_blank" href="https://aqshalzakki.github.io/counter-app/">Counter App</a>
                             </h4>
-                            <a href="https://aqshalzakki.github.io/counter-app/">
+                            <a target="_blank" href="https://aqshalzakki.github.io/counter-app/">
                                 <img class="portfolio-images" src="./assets/img/portfolios/counter-app.PNG">
                             </a>
                         </li>
