adding simple ci app

--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
+                                <a target="_blank" href="./assets/img/portfolios/simple-ci-app.PNG">Simple Codeigniter App</a>
+                            </h4>
+                            <a target="_blank" href="./assets/img/portfolios/simple-ci-app.PNG">
+                                <img class="portfolio-images" src="./assets/img/portfolios/simple-ci-app.PNG">
+                            </a>
+                        </li>
+                        <li class="list-inline-item mb-5">
+                            <h4>
                                 <a target="_blank" href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
                             </h4>
                             <a target="_blank" href="https://aqshalzakki.github.io/color-flipper">
