--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
-                                <a target="_blank" href="./assets/img/portfolios/simple-ci-app.PNG">Simple Codeigniter App</a>
+                                <a target="_blank" href="./assets/img/portfolios/simple-ci-app.PNG">Auth System Codeigniter app</a>
                             </h4>
                             <a target="_blank" href="./assets/img/portfolios/simple-ci-app.PNG">
                                 <img class="portfolio-images" src="./assets/img/portfolios/simple-ci-app.PNG">
