change text from projects to creation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#creation">Creation</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -181,7 +181,7 @@
                             <span style="color: #da3164" class="fa-li"><i class="fas fa-check"></i></span>Membuat <b>RESTFUL API</b> dan <b>TTD(Test Driven Development)</b> menggunakan <b>Laravel</b>,
                         </li>
                         <li>
-                            <span style="color: #1581c0fa" class="fa-li"><i class="fas fa-check"></i></span>Menggunakan <b>Git</b> dan <b>Github</b> Untuk Source Code 
+                            <span style="color: #1581c0fa" class="fa-li"><i class="fas fa-check"></i></span>Menggunakan <b>Git</b> dan <b>Github</b> Untuk Source Code Management 
                         </li>
                         <li>
                             <span style="color: #b45050" class="fa-li"><i class="fas fa-check"></i></span>Bisa Berkomunikasi dan Bekerja sama dengan Tim 
@@ -210,9 +210,9 @@
             <hr class="m-0" />
             <hr class="m-0" />
             
-            <section class="resume-section" id="projects">               <div class="resume-section-content">
-                    <h2>Projects</h2>
-                    <ul class="fa-ul mb-0 list-inline mt-5 project-list">
+            <section class="resume-section" id="creation">               <div class="resume-section-content">
+                    <h2>Creation</h2>
+                    <ul class="fa-ul mb-0 list-inline mt-5 creation-list">
                         <li class="list-inline-item mb-5">
                             <h4>
                                 <a target="_blank" href="./assets/img/portfolios/nomads-travel.PNG">Web Travel Agency</a>
