adding new certifications

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="subheading mb-5">Bandung · Jalan Sukagalih, Indonesia · (+62) 8822-9373-493 · 
                         <a target="_blank" href="mailto:devsomething3@gmail.com">devsomething3@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Seorang Fresh Graduate Web Developer. Mempunyai passion dibidang programming, terutama pada Backend Web Development.</p>
+                    <p class="lead mb-5">Seorang Programmer. Mempunyai passion pada bidang Web Programming, terutama pada Backend Web Development.</p>
                     <div class="social-icons">
                         <a target="_blank" class="social-icon" href="https://www.linkedin.com/in/muhammad-aqshal-zakki/"><i class="fab fa-linkedin-in"></i></a>
                         <a target="_blank" class="social-icon" href="https://www.github.com/aqshalzakki"><i class="fab fa-github"></i></a>
@@ -255,22 +255,34 @@
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a target="_blank" href="./assets/img/sertificates/sertifikasi-kompetensi-1.jpeg">Sertifikasi</a>  Kompetensi SMKN 2 Bandung 
+                            <a target="_blank" href="./assets/img/sertificates/sertifikasi-kompetensi-1.jpeg">JPG1</a>,
+                            <a target="_blank" href="./assets/img/sertificates/sertifikasi-kompetensi-2.jpeg">JPG2</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <a target="_blank" href="./assets/img/sertificates/sertifikasi-pembekalan-bursa-kerja-khusus-1.jpeg">Sertifikasi</a> Pembekalan Bursa Kerja Khusus SMKN 2 Bandung 
+                            <a target="_blank" href="./assets/img/sertificates/sertifikasi-pembekalan-bursa-kerja-khusus-1.jpeg">JPG1</a>,
+                            <a target="_blank" href="./assets/img/sertificates/sertifikasi-pembekalan-bursa-kerja-khusus-2.jpeg">JPG2</a>
+                        </li>
+                        <li>
                             <!-- <div class="mb-2"> -->
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                                <a target="_blank" href="./assets/img/sertificates/artbound.jpeg">Sertifikasi</a> Kelulusan Prakerin (Praktek Kerja Lapangan) di <b>Artbound Indonesia Raya selama 3 Bulan</b>. Klik <a target="_blank" href="./assets/img/sertificates/artbound.jpeg">JPG</a>
+                                <a target="_blank" href="./assets/img/sertificates/artbound.jpeg">Sertifikasi</a> Kelulusan Prakerin (Praktek Kerja Lapangan) di <b>Artbound Indonesia Raya selama 3 Bulan</b>. <a target="_blank" href="./assets/img/sertificates/artbound.jpeg">JPG</a>
                             <!-- </div> -->
                             <!-- <img style="width: 40%;" src="./assets/img/sertificates/artbound.jpeg" alt=""> -->
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a target="_blank" href="./assets/img/sertificates/udemy_fb_clone.jpg">Sertifikasi</a> Membuat <b>Facebook Clone Dengan Laravel, TDD, Vue & Tailwind CSS</b> di <b>Udemy</b>. 
-                            Klik <a target="_blank" href="./assets/img/sertificates/udemy_fb_clone.jpg">JPG</a>, 
+                            <a target="_blank" href="./assets/img/sertificates/udemy_fb_clone.jpg">JPG</a>, 
                             <a target="_blank" href="./assets/pdf/udemy_fb_clone.pdf">PDF</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <a target="_blank" href="./assets/pdf/dicoding_kotlin.pdf">Sertifikasi</a> Memulai Pemrograman Dengan Kotlin di <b>Dicoding</b>. 
-                            Klik <a target="_blank" href="./assets/pdf/dicoding_kotlin.pdf">PDF</a>
+                            <a target="_blank" href="./assets/pdf/dicoding_kotlin.pdf">PDF</a>
                         </li>
                     </ul>
                 </div>
