adding simple login animated

--- a/index.html
+++ b/index.html
@@ -239,6 +239,14 @@
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
+                                <a target="_blank" href="https://aqshalzakki.github.io/simple-animated-login/">Simple Login Animated</a>
+                            </h4>
+                            <a target="_blank" href="https://aqshalzakki.github.io/simple-animated-login/">
+                                <img class="portfolio-images" src="./assets/img/portfolios/simple-login.PNG">
+                            </a>
+                        </li>
+                        <li class="list-inline-item mb-5">
+                            <h4>
                                 <a target="_blank" href="https://aqshalzakki.github.io/color-flipper">Color Flipper</a>
                             </h4>
                             <a target="_blank" href="https://aqshalzakki.github.io/color-flipper">
