--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </li>
                         <li class="list-inline-item mb-5">
                             <h4>
-                                <a target="_blank" href="https://aqshalzakki.github.io/simple-animated-login/">Simple Login Animated</a>
+                                <a target="_blank" href="https://aqshalzakki.github.io/simple-animated-login/">Simple Animated Login</a>
                             </h4>
                             <a target="_blank" href="https://aqshalzakki.github.io/simple-animated-login/">
                                 <img class="portfolio-images" src="./assets/img/portfolios/simple-login.PNG">
